[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/menus/pages/menu_choose_options.gd" type="Script" id=1]
[ext_resource path="res://resources/themes/base_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/menus/global/my_menu_button.gd" type="Script" id=3]

[node name="MenuChooseOptions" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
alignment = 1
script = ExtResource( 1 )

[node name="Buttons" type="VBoxContainer" parent="."]
margin_left = 660.0
margin_top = 417.0
margin_right = 1260.0
margin_bottom = 662.0
rect_min_size = Vector2( 600, 0 )
size_flags_horizontal = 4
custom_constants/separation = 25
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GeneralButton" type="Button" parent="Buttons"]
margin_right = 600.0
margin_bottom = 65.0
text = "MENU_GENERAL"
script = ExtResource( 3 )

[node name="GameplayButton" type="Button" parent="Buttons"]
margin_top = 90.0
margin_right = 600.0
margin_bottom = 155.0
text = "MENU_GAMEPLAY"
script = ExtResource( 3 )

[node name="BackButton" type="Button" parent="Buttons"]
margin_top = 180.0
margin_right = 600.0
margin_bottom = 245.0
text = "MENU_BACK"
script = ExtResource( 3 )

[connection signal="pressed" from="Buttons/GeneralButton" to="." method="_on_GeneralButton_pressed"]
[connection signal="pressed" from="Buttons/GameplayButton" to="." method="_on_GameplayButton_pressed"]
[connection signal="pressed" from="Buttons/BackButton" to="." method="_on_BackButton_pressed"]
